--- a/index.html
+++ b/index.html
@@ -1,11 +1,173 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empresa de desarrollo de software</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+
+    <!-- Preloader -->
+    <section class="d-flex align-items-center justify-content-center preloader">
+        <h1 class="animate__animated animate__slideInLeft animate__Fast" id="tit_preloader">CoderHub</h1>
+    </section>
+
+
+    <!-- nav -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">DevHouse</a>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link active" data-section="home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" data-section="about">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" data-section="portfolio">Portafolio</a></li>
+                <li class="nav-item"><a class="nav-link" data-section="services">Servicios</a></li>
+                <li class="nav-item"><a class="nav-link" data-section="contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Home -->
+    <section class="home">
+        <div class="container-fluid contenido-home  h-100">
+
+        </div>
+    </section>
+
+    <!-- Info Transicion -->
+    <section class="container-fluid">
+        <div class="row h-100 m-5">
+            <div class="col-3  col-lg-3 d-flex justify-content-center">
+                <p class="text-muted small">
+                    <i class="bi bi-arrow-right-circle-fill me-2"></i>
+                    Trusted by the Best
+                </p>
+            </div>
+            <div class="col-12 col-lg-9 ">
+                <h2 class="fw-bold mb-2">
+                    Building spatial computing software
+                </h2>
+                <p class="fs-4 text-secondary">
+                    for the worlds most innovative enterprises.
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Carrusel de empresas -->
+    <section class="container" id="marcas">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="./img/logoMicro.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="./img/meta.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/medronic.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+
+
+    <!-- Info Transicion -->
+    <section class="container-fluid">
+        <div class="row h-100 m-5">
+            <div class="col-3  col-lg-3 d-flex justify-content-center">
+                <p class="text-muted small">
+                    <i class="bi bi-arrow-right-circle-fill me-2"></i>
+                    Trusted by the Best
+                </p>
+            </div>
+            <div class="col-12 col-lg-9">
+                <div class="contianer-fluid">
+                    <div class="row">
+                        <div class="col-10 d-flex align-items-center justify-content-start"> Work.</div>
+                        <div class="col-2 d-flex align-items-end justify-content-end">We build spatial computing apps
+                            that deliver business impact.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-end">
+            <a href="#" class="btn btn-dark rounded-pill">
+                View more work
+            </a>
+        </div>
+    </section>
+
+
+    <!-- cartas de trabajo -->
+    <div class="card mt-5 p-5" style="height:90vh; width:100%;">
+        <div class="card-header text-center">
+            Mi Título
+        </div>
+        <img src="https://picsum.photos/800/600?grayscale&blur=5" class="card-img-bottom"
+            style="height:100%; width:100%; object-fit:cover;" alt="Tarjeta de trabajo">
+    </div>
+
+    <div class="card mt-5 p-5" style="height:90vh; width:100%;">
+        <div class="card-header text-center">
+            Mi Título
+        </div>
+        <img src="https://picsum.photos/800/600?grayscale&blur=5" class="card-img-bottom"
+            style="height:100%; width:100%; object-fit:cover;" alt="Tarjeta de trabajo">
+    </div>
+
+    <div class="card mt-5 p-5" style="height:90vh; width:100%;">
+        <div class="card-header text-center">
+            Mi Título
+        </div>
+        <img src="https://picsum.photos/800/600?grayscale&blur=5" class="card-img-bottom"
+            style="height:100%; width:100%; object-fit:cover;" alt="Tarjeta de trabajo">
+    </div>
+
+
+    <footer class="bg-dark text-white text-center p-3 mt-5">
+        <p>&copy; 2025 DevHouse - Todos los derechos reservados</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
