--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -42,13 +47,13 @@
         <div class="container-fluid contenido-home  h-100 px-5 py-5">
             <div class="row h-75 align-items-center px-5">
                 <div class="col">
-                    <h1 class="fw-bold display-2">CoderHub</h1>
-                    <h3 class="fw-semibold ps-5">XR Studio for Enterprise</h3>
+                    <h1 class="tipoDeFuente tituloF">CoderHub</h1>
+                    <h3 class="ps-5 tipoDeFuente tituloS">XR Studio for Enterprise</h3>
                 </div>
             </div>
             <div class="row h-25 px-5 pb-5">
                 <div class="d-flex justify-content-between align-items-center">
-                    <p>Transforming bold ideas into spatial computing apps.</p>
+                    <p class="tipoDeFuente tituloP">Transforming bold ideas into spatial computing apps.</p>
                     <a href="#">a</a>
                 </div>
             </div>
@@ -59,13 +64,13 @@
     <section class="container-fluid mt-5 px-5">
         <div class="row m-5">
             <div class="col-3  col-lg-3 d-flex justify-content-center">
-                <p class="text-muted small">
+                <p class="tipoDeFuente tituloP">
                     <i class="bi bi-arrow-right-circle-fill me-2"></i>
                     Trusted by the Best
                 </p>
             </div>
             <div class="col-12 col-lg-9 ">
-                <h2 class="fw-bold mb-2">
+                <h2 class="tipoDeFuente tituloS mb-2">
                     Building spatial computing software
                 </h2>
                 <p class="fs-4 text-secondary">
@@ -128,16 +133,16 @@
     <section class="container-fluid mt-5 px-5">
         <div class="row m-5">
             <div class="col-3  col-lg-3 d-flex justify-content-center">
-                <p class="text-muted small">
-                    <i class="bi bi-arrow-right-circle-fill me-2"></i>
-                    Trusted by the Best
+                <p class="text-muted tipoDeFuente tituloP">
+                    <i class="bi bi-arrow-right-circle-fill me-2">></i>
+                    Case Studies
                 </p>
             </div>
             <div class="col-12 col-lg-9">
                 <div class="contianer-fluid">
                     <div class="row">
-                        <div class="col-10 d-flex align-items-center justify-content-start"> Work.</div>
-                        <div class="col-2 d-flex align-items-end justify-content-end">We build spatial computing apps
+                        <div class="col-9 d-flex align-items-center justify-content-start tipoDeFuente tituloF"> Work.</div>
+                        <div class="col-3 d-flex align-items-end justify-content-end tipoDeFuente tituloP text-end">We build spatial computing apps
                             that deliver business impact.</div>
                     </div>
                 </div>
@@ -153,7 +158,7 @@
 
     <!-- cartas de trabajo -->
     <div class="card m-4 p-5" style="height:90vh">
-        <div class="card-header text-center">
+        <div class="card-header text-center tipoDeFuente tituloS">
             Mi Título
         </div>
         <img src="https://picsum.photos/800/600?grayscale&blur=5" class="card-img-bottom"
@@ -161,7 +166,7 @@
     </div>
 
     <div class="card m-4 p-5" style="height:90vh">
-        <div class="card-header text-center">
+        <div class="card-header text-center tipoDeFuente tituloS">
             Mi Título
         </div>
         <img src="https://picsum.photos/800/600?grayscale&blur=5" class="card-img-bottom"
@@ -169,7 +174,7 @@
     </div>
 
     <div class="card m-4 p-5" style="height:90vh">
-        <div class="card-header text-center">
+        <div class="card-header text-center tipoDeFuente tituloS">
             Mi Título
         </div>
         <img src="https://picsum.photos/800/600?grayscale&blur=5" class="card-img-bottom"
@@ -180,14 +185,13 @@
     <section class="container-fluid m-5">
         <div class="row">
             <div class="col-3  col-lg-3 d-flex justify-content-center">
-                <p class="text-muted small">
-                    <i class="bi bi-arrow-right-circle-fill me-2"></i>
+                <p class="text-muted tipoDeFuente tituloP">
+                    <i class="bi bi-arrow-right-circle-fill me-2 bg"></i>
                     Why Choose US
                 </p>
             </div>
             <div class="col-12 col-lg-9">
-                <h2>Enterprises choose Treeview</h2>
-                <h3> because we offer </h3>
+                <h2 class="tipoDeFuente tituloS">Enterprises choose Treeview  <br> because we offer </h2>                
             </div>
         </div>
     </section>
@@ -234,7 +238,7 @@
             </div>
         </div>
         <div class="container-fluid pe-5 d-flex m-3 justify-content-end">
-            <a href="#" class="btn btn-dark rounded-pill">
+            <a href="./html/about.html" class="btn btn-dark rounded-pill">
                 View more work
             </a>
         </div>
@@ -242,13 +246,13 @@
 
 
     <!-- seccion de contacto -->
-    <section class="container-fluid bg-dark text-light py-5" style="height: 90vh;">
+    <section class="container-fluid bg-dark text-light py-5">
         <div class="row justify-content-center align-items-center">
 
             <!-- Columna izquierda: Formulario -->
             <div class="col-md-5">
-                <div class="bg-white text-dark p-4 rounded shadow">
-                    <h4 class="fw-bold">Ready to <span class="text-primary">build XR?</span></h4>
+                <div class="bg-white text-dark p-4 rounded shadow d-flex flex-column g-5">
+                    <h4 class="tipoDeFuente tituloS">Ready to <span class="text-primary">build XR?</span></h4>
                     <form>
                         <div class="mb-3">
                             <label class="form-label">Name*</label>
@@ -273,9 +277,9 @@
 
             <!-- Columna derecha: Texto -->
             <div class="col-md-6 ps-md-5 mt-4 mt-md-0">
-                <h1 class="fw-bold">Let's talk.</h1>
+                <h1 class="tipoDeFuente tituloF">Let's talk.</h1>
                 <p class="lead">
-                    Partner with <span class="fw-bold">Treeview</span> to build your next XR project.
+                    Partner with <span class="tipoDeFuente tituloS">Treeview</span> to build your next XR project.
                 </p>
                 <hr>
                 <ul class="list-unstyled row g-2">
