--- a/html/about.html
+++ b/html/about.html
@@ -11,6 +11,11 @@
 
     <link rel="stylesheet" href="../css/styleAbout.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -49,22 +54,21 @@
     </section>
 
     <!-- Seccion de servicios -->
-    <section class="services-section mx-2">
+    <section class="services-section mx-2 border border-success">
 
-        <div class="container-fluid px-1 h-100">
+        <div class="container-fluid px-1" style="height: 120vh;">
 
-            <div class="row h-25">
+            <div class="row h-25 ">
                 <div class="col-12 col-lg-3 order-2 order-lg-1 d-flex justify-content-center">
                     What we do
                 </div>
                 <!-- Columna 2 -->
-                <div class="col-12 col-lg-9 order-1 order-lg-2 d-flex justify-content-center align-items-end pb-5">
+                <div class="col-12 col-lg-9 order-1 order-lg-2 d-flex justify-content-center align-items-end pb-3">
                     <h2>Services.</h2>
                 </div>
             </div>
 
-            <div
-                class="container-fluid accordion-container h-75 border  d-flex justify-content-center align-items-center mt-2">
+            <div class="row accordion-container h-75 d-flex justify-content-center align-items-center ">
                 <div class="accordion custom-accordion w-100">
 
                     <!-- Spatial Product Design -->
@@ -160,8 +164,8 @@
     </section>
 
 
-    <!-- Seccion de servicios -->
-    <section class="container-fluid mt-5" style="height: 75vh;">
+    <!-- Seccion de resenias -->
+    <section class="container-fluid mt-5" style="height: 50vh;">
         <div class="row h-100 ">
             <div class="col-lg-3 d-flex align-items-center justify-content-center pe-5">
                 What Our Clients Say
@@ -179,6 +183,217 @@
         </div>
     </section>
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-10 col-lg-3 col-md-6 mb-4">
+                <div class="card testimonial-card shadow-sm h-100 border-start border-5 border-primary">
+                    <div class="card-body p-4">
+                        <div class="d-flex align-items-center mb-3">
+                            <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=764&q=80"
+                                alt="Profile" class="profile-img me-3">
+                            <div>
+                                <h6 class="author-name mb-0">Laura Herrera</h6>
+                                <small class="author-company">Tesla</small>
+                            </div>
+                        </div>
+                        <p class="quote-text">"Resultados excepcionales que superaron todas nuestras expectativas. Un
+                            equipo verdaderamente profesional."</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card testimonial-card shadow-sm h-100 border-start border-5 border-primary">
+                    <div class="card-body p-4">
+                        <div class="d-flex align-items-center mb-3">
+                            <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=764&q=80"
+                                alt="Profile" class="profile-img me-3">
+                            <div>
+                                <h6 class="author-name mb-0">Laura Herrera</h6>
+                                <small class="author-company">Tesla</small>
+                            </div>
+                        </div>
+                        <p class="quote-text">"Resultados excepcionales que superaron todas nuestras expectativas. Un
+                            equipo verdaderamente profesional."</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card testimonial-card shadow-sm h-100 border-start border-5 border-primary">
+                    <div class="card-body p-4">
+                        <div class="d-flex align-items-center mb-3">
+                            <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=764&q=80"
+                                alt="Profile" class="profile-img me-3">
+                            <div>
+                                <h6 class="author-name mb-0">Laura Herrera</h6>
+                                <small class="author-company">Tesla</small>
+                            </div>
+                        </div>
+                        <p class="quote-text">"Resultados excepcionales que superaron todas nuestras expectativas. Un
+                            equipo verdaderamente profesional."</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card testimonial-card shadow-sm h-100 border-start border-5 border-primary">
+                    <div class="card-body p-4">
+                        <div class="d-flex align-items-center mb-3">
+                            <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=764&q=80"
+                                alt="Profile" class="profile-img me-3">
+                            <div>
+                                <h6 class="author-name mb-0">Laura Herrera</h6>
+                                <small class="author-company">Tesla</small>
+                            </div>
+                        </div>
+                        <p class="quote-text">"Resultados excepcionales que superaron todas nuestras expectativas. Un
+                            equipo verdaderamente profesional."</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Meet the teeam -->
+    <section class="container-fluid mt-5" style="height: 30vh;">
+        <div class="row h-100 ">
+            <div class="col-lg-3 d-flex align-items-center justify-content-center pe-5">
+                Meet the Team
+            </div>
+            <div class="col-12 col-lg-9 h-100">
+                <div class="container me-5 h-100 d-flex align-items-end justify-content-center pb-5">
+                    <div class="row">
+                        <div class="col-10">
+                            Join one of the world’s top XR studios and help shape the future of technology
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="container">
+        <div class="row m-3 g-3">
+            <div class="col-12 col-md-6">
+                <img src="../img/team1.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG1">
+            </div>
+            <div class="col-12 col-md-6">
+                <img src="../img/team2.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG2">
+            </div>
+            <div class="col-12 col-md-6">
+                <img src="../img/team3.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG3">
+            </div>
+            <div class="col-12 col-md-6">
+                <img src="../img/team4.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG4">
+            </div>
+        </div>
+    </div>
+
+    <div class="container bg-white my-3">
+        <div class="row">
+            <div class="col-7 p-5">
+                <h2> Meet the founder</h2>
+                <h3> Pioneering the future of Spatial Computing</h3>
+                <p>Since 2016, Horacio has led Treeview from a garage VR studio into a globally recognized leader in the
+                    XR industry.</p>
+                <p>Driven by a passion for technology, innovation, history and philosophy, Horacio works to help shape
+                    the next technological and cultural revolution. He sees spatial computing as the ultimate bridge
+                    between humanity and technology.</p>
+                <div class="container d-flex justify-content-start p-5">
+                    <button type="button" class="btn btn-outline-primary"> LinkedIn</button>
+                </div>
+            </div>
+            <div class="col-5 py-5">
+                <img src="../img/CEO.jpg" class="img-fluid rounded mx-auto d-block" alt="IMG2">
+            </div>
+        </div>
+    </div>
+
+    <!-- seccion de contacto -->
+    <section class="container-fluid bg-dark text-light py-5">
+        <div class="row justify-content-center align-items-center">
+
+            <!-- Columna izquierda: Formulario -->
+            <div class="col-md-5">
+                <div class="bg-white text-dark p-4 rounded shadow d-flex flex-column g-5">
+                    <h4 class="tipoDeFuente tituloS">Ready to <span class="text-primary">build XR?</span></h4>
+                    <form>
+                        <div class="mb-3">
+                            <label class="form-label">Name*</label>
+                            <input type="text" class="form-control" placeholder="Full name">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">E-mail*</label>
+                            <input type="email" class="form-control" placeholder="Work email">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">How did you hear about us?</label>
+                            <input type="text" class="form-control" placeholder="e.g. LinkedIn, ChatGPT...">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Message*</label>
+                            <textarea class="form-control" rows="3" placeholder="Your message"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-dark w-100 rounded-pill">Send Message</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Columna derecha: Texto -->
+            <div class="col-md-6 ps-md-5 mt-4 mt-md-0">
+                <h1 class="tipoDeFuente tituloF">Let's talk.</h1>
+                <p class="lead">
+                    Partner with <span class="tipoDeFuente tituloS">Treeview</span> to build your next XR project.
+                </p>
+                <hr>
+                <ul class="list-unstyled row g-2">
+                    <li class="col-6"><i class="bi bi-check-circle me-2"></i>End-to-End Delivery</li>
+                    <li class="col-6"><i class="bi bi-lightning-charge me-2"></i>Startup Speed</li>
+                    <li class="col-6"><i class="bi bi-people me-2"></i>Long-Term Partnership</li>
+                    <li class="col-6"><i class="bi bi-code-slash me-2"></i>Full IP Ownership</li>
+                    <li class="col-6"><i class="bi bi-award me-2"></i>World-Class Team</li>
+                    <li class="col-6"><i class="bi bi-building me-2"></i>Enterprise-Grade</li>
+                </ul>
+            </div>
+
+        </div>
+    </section>
+
+
+    <section class="container-fluid m-3">
+        <div class="row">            
+            <div class="col-4 d-flex align-items-start flex-column mt-5 justify-content-center">
+                <h4>Social</h4>
+                <button type="submit" class="btn btn-outline-primary">LinkedIn</button>
+            </div>
+            <div class="col-8 mt-5">
+                <div class="container ">
+                    <div class="row g-5">
+                        <div class="col-lg-6 d-flex flex-column g-3 ">
+                            <h2>Newsletter</h2>
+
+                            <form class="newsletter-form">
+                                <div class="mb-3">
+                                    <input type="email" class="form-control form-control-custom" placeholder="Email *"
+                                        required>
+                                </div>
+
+                                <button type="submit" class="btn btn-danger">
+                                    Subscribe
+                                    <span class="ms-2">●</span>
+                                </button>
+                            </form>
+                            <p>
+                                Join our newsletter for updates on the<br>
+                                latest in spatial computing and XR.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
