--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -133,16 +136,18 @@
     <section class="container-fluid mt-5 px-5">
         <div class="row m-5">
             <div class="col-3  col-lg-3 d-flex justify-content-center">
-                <p class="text-muted tipoDeFuente tituloP">
-                    <i class="bi bi-arrow-right-circle-fill me-2">></i>
+                <p class="tipoDeFuente tituloP">
+                    <i class="bi bi-arrow-right-circle-fill me-2"></i>
                     Case Studies
                 </p>
             </div>
             <div class="col-12 col-lg-9">
                 <div class="contianer-fluid">
                     <div class="row">
-                        <div class="col-9 d-flex align-items-center justify-content-start tipoDeFuente tituloF"> Work.</div>
-                        <div class="col-3 d-flex align-items-end justify-content-end tipoDeFuente tituloP text-end">We build spatial computing apps
+                        <div class="col-9 d-flex align-items-center justify-content-start tipoDeFuente tituloF"> Work.
+                        </div>
+                        <div class="col-3 d-flex align-items-end justify-content-end tipoDeFuente tituloP text-end">We
+                            build spatial computing apps
                             that deliver business impact.</div>
                     </div>
                 </div>
@@ -157,41 +162,50 @@
 
 
     <!-- cartas de trabajo -->
-    <div class="card m-4 p-5" style="height:90vh">
-        <div class="card-header text-center tipoDeFuente tituloS">
-            Mi Título
-        </div>
-        <img src="https://picsum.photos/800/600?grayscale&blur=5" class="card-img-bottom"
-            style="height:100%; width:100%; object-fit:cover;" alt="Tarjeta de trabajo">
-    </div>
 
-    <div class="card m-4 p-5" style="height:90vh">
-        <div class="card-header text-center tipoDeFuente tituloS">
-            Mi Título
-        </div>
-        <img src="https://picsum.photos/800/600?grayscale&blur=5" class="card-img-bottom"
-            style="height:100%; width:100%; object-fit:cover;" alt="Tarjeta de trabajo">
-    </div>
 
-    <div class="card m-4 p-5" style="height:90vh">
-        <div class="card-header text-center tipoDeFuente tituloS">
-            Mi Título
+    <div class="container-fluid py-4 mt-5">
+        <div class="row g-3">
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card border h-100">
+                    <div class="card-header bg-white">
+                        <h6 class="card-title mb-0">Digital Twin Data Visualization</h6>
+                    </div>
+                    <img src="./img/work1.png" class="card-img-bottom" alt="Digital Twin">
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card border h-100">
+                    <div class="card-header bg-white">
+                        <h6 class="card-title mb-0">First Nations Cultural Preservation</h6>
+                    </div>
+                    <img src="./img/work2.png" class="card-img-bottom" alt="Cultural">
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4">
+                <div class="card border h-100">
+                    <div class="card-header bg-white">
+                        <h6 class="card-title mb-0">Microsoft Partnership</h6>
+                    </div>
+                    <img src="./img/work3.png" class="card-img-bottom" alt="Partnership">
+                </div>
+            </div>
         </div>
-        <img src="https://picsum.photos/800/600?grayscale&blur=5" class="card-img-bottom"
-            style="height:100%; width:100%; object-fit:cover;" alt="Tarjeta de trabajo">
     </div>
 
     <!-- Info Transicion -->
     <section class="container-fluid m-5">
         <div class="row">
             <div class="col-3  col-lg-3 d-flex justify-content-center">
-                <p class="text-muted tipoDeFuente tituloP">
+                <p class="tipoDeFuente tituloP">
                     <i class="bi bi-arrow-right-circle-fill me-2 bg"></i>
                     Why Choose US
                 </p>
             </div>
             <div class="col-12 col-lg-9">
-                <h2 class="tipoDeFuente tituloS">Enterprises choose Treeview  <br> because we offer </h2>                
+                <h2 class="tipoDeFuente tituloS">Enterprises choose Treeview <br> because we offer </h2>
             </div>
         </div>
     </section>
@@ -202,36 +216,36 @@
         <div class="row">
             <div class="col-6 col-lg-3">
                 <div class="card shadow-sm border-0 rounded-4 p-5 position-relative">
-                    <span class="position-absolute top-0 end-0 me-3 mt-3 text-muted small"> 001 </span>
+                    <span class="position-absolute top-0 end-0 me-3 mt-3 small"> 001 </span>
                     <div class="d-flex align-items-center gap-3">
-                        <i class="bi bi-box" style="font-size:2rem;">[]</i>
+                        <i class="bi bi-box" style="font-size:2rem;"></i>
                         <p class="mb-0 fw-medium"> End-to-end delivery under one senior team. </p>
                     </div>
                 </div>
             </div>
             <div class="col-6 col-lg-3">
                 <div class="card shadow-sm border-0 rounded-4 p-5 position-relative">
-                    <span class="position-absolute top-0 end-0 me-3 mt-3 text-muted small"> 001 </span>
+                    <span class="position-absolute top-0 end-0 me-3 mt-3 small"> 002 </span>
                     <div class="d-flex align-items-center gap-3">
-                        <i class="bi bi-box" style="font-size:2rem;">[]</i>
+                        <i class="bi bi-box" style="font-size:2rem;"></i>
                         <p class="mb-0 fw-medium"> End-to-end delivery under one senior team. </p>
                     </div>
                 </div>
             </div>
             <div class="col-6 col-lg-3">
                 <div class="card shadow-sm border-0 rounded-4 p-5 position-relative">
-                    <span class="position-absolute top-0 end-0 me-3 mt-3 text-muted small"> 001 </span>
+                    <span class="position-absolute top-0 end-0 me-3 mt-3 small"> 003 </span>
                     <div class="d-flex align-items-center gap-3">
-                        <i class="bi bi-box" style="font-size:2rem;">[]</i>
+                        <i class="bi bi-box" style="font-size:2rem;"></i>
                         <p class="mb-0 fw-medium"> End-to-end delivery under one senior team. </p>
                     </div>
                 </div>
             </div>
             <div class="col-6 col-lg-3">
                 <div class="card shadow-sm border-0 rounded-4 p-5 position-relative">
-                    <span class="position-absolute top-0 end-0 me-3 mt-3 text-muted small"> 001 </span>
+                    <span class="position-absolute top-0 end-0 me-3 mt-3 small"> 004 </span>
                     <div class="d-flex align-items-center gap-3">
-                        <i class="bi bi-box" style="font-size:2rem;">[]</i>
+                        <i class="bi bi-box" style="font-size:2rem;"></i>
                         <p class="mb-0 fw-medium"> End-to-end delivery under one senior team. </p>
                     </div>
                 </div>
@@ -246,59 +260,90 @@
 
 
     <!-- seccion de contacto -->
-    <section class="container-fluid bg-dark text-light py-5">
-        <div class="row justify-content-center align-items-center">
+    <section class="container-fluid px-5 mt-5">
+        <section class="container-fluid bg-dark text-light shadow border-4 ">
+            <div class="row justify-content-center align-items-center ">
+                <!-- Columna izquierda: Formulario -->
+                <div class="col-md-5">
+                    <div class="bg-white text-dark p-4 rounded shadow d-flex flex-column g-5">
+                        <h4 class="tipoDeFuente tituloS">Ready to <span class="text-primary">build XR?</span></h4>
+                        <form>
+                            <div class="mb-3">
+                                <label class="form-label">Name*</label>
+                                <input type="text" class="form-control" placeholder="Full name">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">E-mail*</label>
+                                <input type="email" class="form-control" placeholder="Work email">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">How did you hear about us?</label>
+                                <input type="text" class="form-control" placeholder="e.g. LinkedIn, ChatGPT...">
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Message*</label>
+                                <textarea class="form-control" rows="3" placeholder="Your message"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-dark w-100 rounded-pill">Send Message</button>
+                        </form>
+                    </div>
+                </div>
 
-            <!-- Columna izquierda: Formulario -->
-            <div class="col-md-5">
-                <div class="bg-white text-dark p-4 rounded shadow d-flex flex-column g-5">
-                    <h4 class="tipoDeFuente tituloS">Ready to <span class="text-primary">build XR?</span></h4>
-                    <form>
-                        <div class="mb-3">
-                            <label class="form-label">Name*</label>
-                            <input type="text" class="form-control" placeholder="Full name">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">E-mail*</label>
-                            <input type="email" class="form-control" placeholder="Work email">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">How did you hear about us?</label>
-                            <input type="text" class="form-control" placeholder="e.g. LinkedIn, ChatGPT...">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Message*</label>
-                            <textarea class="form-control" rows="3" placeholder="Your message"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-dark w-100 rounded-pill">Send Message</button>
-                    </form>
+                <!-- Columna derecha: Texto -->
+                <div class="col-md-6 ps-md-5 mt-4 mt-md-0">
+                    <h1 class="tipoDeFuente tituloF">Let's talk.</h1>
+                    <p class="lead">
+                        Partner with <span class="tipoDeFuente tituloS">Treeview</span> to build your next XR project.
+                    </p>
+                    <hr>
+                    <ul class="list-unstyled row g-2">
+                        <li class="col-6"><i class="bi bi-check-circle me-2"></i>End-to-End Delivery</li>
+                        <li class="col-6"><i class="bi bi-lightning-charge me-2"></i>Startup Speed</li>
+                        <li class="col-6"><i class="bi bi-people me-2"></i>Long-Term Partnership</li>
+                        <li class="col-6"><i class="bi bi-code-slash me-2"></i>Full IP Ownership</li>
+                        <li class="col-6"><i class="bi bi-award me-2"></i>World-Class Team</li>
+                        <li class="col-6"><i class="bi bi-building me-2"></i>Enterprise-Grade</li>
+                    </ul>
+                </div>
+
+            </div>
+        </section>
+    </section>
+
+
+    <section class="container-fluid my-5 px-5 border border-start">
+        <div class="row border shadow rounded-5 border border-primary">
+            <div class="col-3 d-flex align-items-start flex-column mt-5 justify-content-center ps-5">
+                <h2 class="tipoDeFuente tituloS ">Social.</h2>
+                <button type="submit" class="btn btn-outline-primary"> <i class="bi bi-linkedin"></i> LinkedIn</button>
+            </div>
+            <div class="col-9">
+                <div class="container">
+                    <div class="row g-5">
+                        <h2 class="tipoDeFuente tituloF">Newsletter</h2>
+
+                        <form class="newsletter-form">
+                            <div class="mb-3">
+                                <input type="email" class="form-control form-control-custom" placeholder="Email *"
+                                    required>
+                            </div>
+
+                            <button type="submit" class="btn btn-danger">
+                                Subscribe
+                                <span class="ms-2"> <i class="bi bi-arrow-bar-up"></i> </span>
+                            </button>
+                        </form>
+                        <p class="tipoDeFuente tituloP">
+                            Join our newsletter for updates on the<br>
+                            latest in spatial computing and XR.
+                        </p>
+                    </div>
                 </div>
             </div>
-
-            <!-- Columna derecha: Texto -->
-            <div class="col-md-6 ps-md-5 mt-4 mt-md-0">
-                <h1 class="tipoDeFuente tituloF">Let's talk.</h1>
-                <p class="lead">
-                    Partner with <span class="tipoDeFuente tituloS">Treeview</span> to build your next XR project.
-                </p>
-                <hr>
-                <ul class="list-unstyled row g-2">
-                    <li class="col-6"><i class="bi bi-check-circle me-2"></i>End-to-End Delivery</li>
-                    <li class="col-6"><i class="bi bi-lightning-charge me-2"></i>Startup Speed</li>
-                    <li class="col-6"><i class="bi bi-people me-2"></i>Long-Term Partnership</li>
-                    <li class="col-6"><i class="bi bi-code-slash me-2"></i>Full IP Ownership</li>
-                    <li class="col-6"><i class="bi bi-award me-2"></i>World-Class Team</li>
-                    <li class="col-6"><i class="bi bi-building me-2"></i>Enterprise-Grade</li>
-                </ul>
-            </div>
-
         </div>
     </section>
 
 
-    <footer class="bg-dark text-white text-center p-3 mt-5">
-        <p>&copy; 2025 DevHouse - Todos los derechos reservados</p>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
