--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <img src="./img/al3.png" alt="al1" class="img-fluid saltImg rounded-5 ">
             </div>
 
-            <div class="col-6 col-lg-3 col-xl-2 animate-on-scroll">
+            <div class="col-6 col-lg-3 col-xl-2 ">
                 <img src="./img/al4.png" alt="al1" class="img-fluid saltImg rounded-5 ">
             </div>
 
@@ -209,9 +209,9 @@
 
     <!-- targetas de cuyalidades-->
 
-    <div class="container-fluid mt-5 px-5">
-        <div class="row">
-            <div class="col-6 col-lg-3">
+    <div class="container-fluid mt-5 px-3">
+        <div class="row d-flex g-3">
+            <div class="col12 col-md-6 col-lg-3">
                 <div class="card shadow-sm border-0 rounded-4 p-5 position-relative">
                     <span class="position-absolute top-0 end-0 me-3 mt-3 small"> 001 </span>
                     <div class="d-flex align-items-center gap-3">
@@ -220,7 +220,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col12 col-md-6 col-lg-3">
                 <div class="card shadow-sm border-0 rounded-4 p-5 position-relative">
                     <span class="position-absolute top-0 end-0 me-3 mt-3 small"> 002 </span>
                     <div class="d-flex align-items-center gap-3">
@@ -229,7 +229,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col12 col-md-6 col-lg-3">
                 <div class="card shadow-sm border-0 rounded-4 p-5 position-relative">
                     <span class="position-absolute top-0 end-0 me-3 mt-3 small"> 003 </span>
                     <div class="d-flex align-items-center gap-3">
@@ -238,7 +238,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 col-lg-3">
+            <div class="col12 col-md-6 col-lg-3">
                 <div class="card shadow-sm border-0 rounded-4 p-5 position-relative">
                     <span class="position-absolute top-0 end-0 me-3 mt-3 small"> 004 </span>
                     <div class="d-flex align-items-center gap-3">
